--- a/index.html
+++ b/index.html
@@ -1,46 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Products</title>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-    }
-    .container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        max-width: 1000px;
-        margin: 0 auto;
-    }
-    .tweet {
-        width: 30%;
-        margin-bottom: 20px;
-        padding: 10px;
-        border: 1px solid #ccc;
-        box-sizing: border-box;
-    }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Products</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+        .tweet {
+            width: 30%;
+            margin-bottom: 20px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+        }
+    </style>
 </head>
 <body>
-<div class="container">
-    <div class="tweet">
-        <!-- Replace the data-conversation-id attribute value with your tweet's ID -->
-         <blockquote class="twitter-tweet"><p lang="en" dir="ltr">2024 NEW Wander Plus Anti Theft Travel Bag Slim Sling Bag Cross Body Travel Bag<a href="https://twitter.com/hashtag/Ad?src=hash&amp;ref_src=twsrc%5Etfw">#Ad</a> <a href="https://t.co/1e3N3mWJIl">https://t.co/1e3N3mWJIl</a></p>&mdash; DEALS AND MORE (@amzn_link) <a href="https://twitter.com/amzn_link/status/1769469918649499766?ref_src=twsrc%5Etfw">March 17, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <div class="container">
+        <div class="tweet">
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">2024 NEW Wander Plus Anti Theft Travel Bag Slim Sling Bag Cross Body Travel Bag <a href="https://twitter.com/hashtag/Ad?src=hash&amp;ref_src=twsrc%5Etfw">#Ad</a> <a href="https://t.co/1e3N3mWJIl">https://t.co/1e3N3mWJIl</a></p>
+                &mdash; DEALS AND MORE (@amzn_link)
+                <a href="https://twitter.com/amzn_link/status/1769469918649499766?ref_src=twsrc%5Etfw">March 17, 2024</a>
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+        <div class="tweet">
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">Solar Eclipse Glasses AAS Approved 2024 - ISO 12312-2:2015(E) & CE Certified, 3 Pack Durable Plastic Eclipse Glasses for Direct Sun Viewing <a href="https://twitter.com/hashtag/Ad?src=hash&amp;ref_src=twsrc%5Etfw">#Ad</a> <a href="https://t.co/Bz2zKLbxBN">https://t.co/Bz2zKLbxBN</a></p>
+                &mdash; DEALS AND MORE (@amzn_link)
+                <a href="https://twitter.com/amzn_link/status/1769469704555409669?ref_src=twsrc%5Etfw">March 17, 2024</a>
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+        <div class="tweet">
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">Logitech G920 Driving Force Racing Wheel and Floor Pedals, Real Force Feedback, Stainless Steel Paddle Shifters, Leather Steering Wheel Cover for Xbox Series X|S, Xbox One, PC, Mac - Black <a href="https://twitter.com/hashtag/Ad?src=hash&amp;ref_src=twsrc%5Etfw">#Ad</a><a href="https://t.co/CIJtoM1ZsZ">https://t.co/CIJtoM1ZsZ</a></p>
+                &mdash; DEALS AND MORE (@amzn_link)
+                <a href="https://twitter.com/amzn_link/status/1769198179604422678?ref_src=twsrc%5Etfw">March 17, 2024</a>
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+        <!-- Repeat the above div block for more tweets -->
     </div>
-    <div class="tweet">
-        <!-- Replace the data-conversation-id attribute value with your tweet's ID -->
-        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Solar Eclipse Glasses AAS Approved 2024 - ISO 12312-2:2015(E) &amp; CE Certified, 3 Pack Durable Plastic Eclipse Glasses for Direct Sun Viewing<a href="https://twitter.com/hashtag/Ad?src=hash&amp;ref_src=twsrc%5Etfw">#Ad</a> <a href="https://t.co/Bz2zKLbxBN">https://t.co/Bz2zKLbxBN</a></p>&mdash; DEALS AND MORE (@amzn_link) <a href="https://twitter.com/amzn_link/status/1769469704555409669?ref_src=twsrc%5Etfw">March 17, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
-    <div class="tweet">
-        <!-- Replace the data-conversation-id attribute value with your tweet's ID -->
-        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Logitech G920 Driving Force Racing Wheel and Floor Pedals, Real Force Feedback, Stainless Steel Paddle Shifters, Leather Steering Wheel Cover for Xbox Series X|S, Xbox One, PC, Mac - Black<a href="https://twitter.com/hashtag/Ad?src=hash&amp;ref_src=twsrc%5Etfw">#Ad</a><a href="https://t.co/CIJtoM1ZsZ">https://t.co/CIJtoM1ZsZ</a></p>&mdash; DEALS AND MORE (@amzn_link) <a href="https://twitter.com/amzn_link/status/1769198179604422678?ref_src=twsrc%5Etfw">March 17, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
-    <!-- Repeat the above div block for more tweets -->
-
-</div>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
